--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,54 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgb(57, 49, 102);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.App {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  font-family: cursive;
+}
+
+.numberDiv {
+display: flex;
+height: 200px;
+align-items: center;
+font-size: 5rem;
+}
+
+.btns {
+display: flex;
+align-items: center;
+height: 200px;
+}
+
+button {
+  max-height: max-content;
+  margin: 0 20px;
+  background-color: rgba(255, 255, 255, 0.349);
+  border: none;
+  border-radius: 15px;
+  padding: 20px;
+  font-family: cursive;
+}
+
+button:focus {
+  outline: none;
+  background-color: white;
+}
+
+button:nth-child(3):hover {
+  background-color: tomato;
+}
+
+.red {
+  color:tomato;
 }
